# pro-rag

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
frontend/: app.py
frontend/.chainlit/: config.toml
frontend/public/elements/: DeleteFileModal.jsx  GetFiles.jsx  UploadFileModal.jsx
minio/: docker-compose.yml
postgres/: docker-compose.yml  ragstore.sql
qdrant/: docker-compose.yml
src/: builder.py  config.py  docstore.py  llm.py  loader.py  logger.py  minio_client.py  models.py  prompts.py  qdrant.py  rag.py  retriever.py  utils.py
src/api/: file.py
src/db/: models.py  session.py
templates/: context_relevance.txt  final_answer.txt  query_rewrite.txt
