[project]
name = "pro-rag"
version = "0.1.0"
description = "RAG Chat App"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "einops>=0.8.1",
    "fastapi>=0.116.1",
    "fastembed>=0.7.1",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-qdrant>=0.2.0",
    "minio>=7.2.16",
    "psycopg2-binary>=2.9.10",
    "pypdf>=5.9.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.0",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "black>=25.1.0",
    "chainlit>=2.7.1.1",
    "langchain-openai>=0.3.31",
    "onnxruntime==1.17.0",
    "numpy==1.26.4",
    "torch==2.2.2"
]

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]
